--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
+        "css-loader": "^6.7.1",
+        "sass": "^1.49.9",
+        "sass-loader": "^12.6.0",
+        "swiper": "^8.0.7",
         "vue": "^3.2.30",
+        "vue-awesome-swiper": "^5.0.1",
         "vue-router": "^4.0.12"
     }
 }
