--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "swiper": "^8.0.7",
         "vue": "^3.2.30",
         "vue-awesome-swiper": "^5.0.1",
-        "vue-router": "^4.0.12"
+        "vue-router": "^4.0.12",
+        "vuesax": "^3.12.2",
+        "vuesax3": "^4.0.15"
     }
 }
