--- a/package.json
+++ b/package.json
@@ -22,12 +22,20 @@
     },
     "dependencies": {
         "@suadelabs/vue3-multiselect": "^1.0.2",
+        "@tiptap/extension-color": "^2.0.0-beta.9",
+        "@tiptap/extension-image": "^2.0.0-beta.27",
+        "@tiptap/extension-text-style": "^2.0.0-beta.23",
+        "@tiptap/starter-kit": "^2.0.0-beta.183",
+        "@tiptap/vue-3": "^2.0.0-beta.90",
         "css-loader": "^6.7.1",
         "element-plus": "1.1.0-beta.24",
+        "remixicon": "^2.5.0",
         "sass": "^1.49.9",
         "sass-loader": "^12.6.0",
         "swiper": "^8.0.7",
+        "vee-validate": "^4.5.10",
         "vue": "^3.2.30",
-        "vue-router": "^4.0.12"
+        "vue-router": "^4.0.12",
+        "yup": "^0.32.11"
     }
 }
