--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
         "swiper": "^8.0.7",
         "vee-validate": "^4.5.10",
         "vue": "^3.2.30",
+        "vue-meta": "^3.0.0-alpha.2",
         "vue-router": "^4.0.12",
+        "vuex": "^4.0.2",
         "yup": "^0.32.11"
     }
 }
