--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@tiptap/extension-text-style": "^2.0.0-beta.23",
         "@tiptap/starter-kit": "^2.0.0-beta.183",
         "@tiptap/vue-3": "^2.0.0-beta.90",
+        "@vueuse/head": "^0.7.5",
         "css-loader": "^6.7.1",
         "element-plus": "1.1.0-beta.24",
         "remixicon": "^2.5.0",
