--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/custom.css": "/css/custom.css"
+    "/js/app.js": "/js/app.js?id=20f109f160a553bca503",
+    "/css/app.css": "/css/app.css?id=47957aadd41a2bb36752",
+    "/css/custom.css": "/css/custom.css?id=4a356ac47bfc4a220cbb"
 }
