--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=20f109f160a553bca503",
-    "/css/app.css": "/css/app.css?id=47957aadd41a2bb36752",
-    "/css/custom.css": "/css/custom.css?id=4a356ac47bfc4a220cbb"
+    "/js/app.js": "/js/app.js?id=8319eaaa54e9ec84265a",
+    "/css/custom.css": "/css/custom.css?id=0eb1540847c94de5c950",
+    "/css/app.css": "/css/app.css?id=d090dd776f9d7764f6c3"
 }
